third_party/rust/cxx/v1/crate/tests/ui/slice_unsupported.rs
#[cxx::bridge]
mod ffi {
    unsafe extern "C++" {
        type Opaque;

        fn f(_: &mut [Opaque]);
    }
}

fn main() {}
